examples/test/testpolicy10092.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10092
  namespace: namespace124
spec:
  podSelector:
    matchLabels:
      key0: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value49
      podSelector:
        matchLabels:
          key41: value7
          key29: value16
          key26: value33
